# List-of-signals-to-config

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  script.py  script_OOP.py  settings.py
src/: data_loader.py  data_mapper.py  file_creator.py  main.py  script.py  settings.py  signal_processor.py
