[tool.poetry]
name = "list-of-signals-to-config"
version = "0.1.0"
description = ""
authors = ["KirGorbunov <KirGorbunov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
pydantic-settings = "^2.6.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
